after edit this styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,6 +150,8 @@ nav .button{
     font-size: 24px;
     color: white;
     background: #f0a800a0;
+    margin-left: 120px;
+    margin-right: 120px;
 }
 
 /* curriculum style */
